--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span>
                 <select name="left-units" class="dropdown" id="left-unit">
                 </select>
-                <label for="equal sign" id="eql">=</label>
+                <label style="font-size: 30px; font-weight: bolder;" for="equal sign" id="eql">=</label>
                 <select name="right-units" class="dropdown" id="right-unit">
                 </select>
             </span>
